--- a/index.html
+++ b/index.html
@@ -175,5 +175,18 @@ document.getElementById('fbpopup').style.display='block';
 
 <!-- Script Ends -->	
 
+<!-- Notifications TruePush -->
+<script type="application/javascript" src="https://sdki.truepush.com/sdk/v2.0.2/app.js" async></script>
+<script>
+var truepush = window.truepush || [];
+truepush.push(function(){
+    truepush.Init({
+        id: "5f46bfb1ab9adfbe0d59fa26"
+        }, function(error){
+          if(error) console.error(error);
+        })
+    })
+</script>
+	
 </body>
 </html>
