--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="og:description" content="Comida feita com carinho e com gostinho de casa">
 <meta property="og:image" content="https://demaisbistro.com.br/pwapp/bistro/og.png">
 <meta property="og:url" content="https://demaisbistro.com.br/pwapp/bistro/index.html">
-<meta property="og:site_name" content="Deja bem vindo" />
+<meta property="og:site_name" content="Seja bem vindo" />
 
 <!-- Meta Tags for iOS Safari -->
 <meta name="apple-mobile-web-app-capable" content="yes">
