--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <meta property="og:image:width" content="279">
 <meta property="og:title" content="Deja bem vindo">
 <meta property="og:description" content="Comida feita com carinho e com gostinho de casa">
-<meta property="og:image" content="https://demaisbistro.com.br/pwapp/bistro/og.png">
-<meta property="og:url" content="https://demaisbistro.com.br/pwapp/bistro/index.html">
+<meta property="og:image" content="https://demaisbistro.com.br/og.png">
+<meta property="og:url" content="https://demaisbistro.com.br/index.html">
 <meta property="og:site_name" content="Seja bem vindo" />
 
 <!-- Meta Tags for iOS Safari -->
