--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 <!-- Meta Tags for SEO -->
-<title>Deja bem vindo </title>
+<title>Seja bem vindo </title>
 <meta name="description" content="Comida feita com carinho e com gostinho de casa">
 <meta name="keywords" content="Bistrô, Restaurante, Almoço">
 
