--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-touch-fullscreen" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
-<meta name="theme-color" content="=#FCF2D7">
+<meta name="theme-color" content="=#FCF2D7" />
 
 
 <!-- CSS -->
