--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
 <!-- Meta Theme Color -->
 <meta name="theme-color" content="#FCF2D7">
 
+<!-- One Signal -->
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "1133dd34-356d-48a4-970c-d85bb1fdd36c",
+    });
+  });
+</script>	
+
 <!-- Scripts -->
 <!--script1-->
 <!--script2-->
