--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div id="toast"> </div>	
 
 <!-- iPhone Install Popup Starts -->
-<div class="iospopup_overlay1" id="iospopup" style="display: none;">
+<div class="iospopup_overlay" id="iospopup" style="display: none;">
   <div class="iospopup_bottom">
 	<div id="iospopup_box">
 		<img src="./mstile-70x70.png" class="pwaicon"> 
