--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:image:height" content="279">
 <meta property="og:image:width" content="279">
-<meta property="og:title" content="Deja bem vindo">
+<meta property="og:title" content="Seja bem vindo">
 <meta property="og:description" content="Comida feita com carinho e com gostinho de casa">
 <meta property="og:image" content="https://demaisbistro.com.br/og.jpg">
 <meta property="og:url" content="https://demaisbistro.com.br/index.html">
